--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:feedBackForm": "node dist/feed-back-form/server/server.mjs"
+    "serve:ssr:feedBackForm": "node dist/feed-back-form/server/server.mjs",
+    "json-server": "json-server --watch db.json --port 3000"
   },
   "private": true,
   "dependencies": {
